# ylc-rs

./: .gitignore  Cargo.toml  README.md  array.ylc  binop.ylc  complex_fn.ylc  exe  extern.ylc  fib.ylc  func.ylc  generic_fn.ylc  if.ylc  justfile  main_segfault.rs  object  simple.ylc  structs.ylc  test.ylc  tuple.ylc  unifier.py
.ropeproject/: autoimport.db
clibs/: libffi.c
examples/: array.ylc  array_cons.ylc  array_matching.ylc  binop.ylc  currying.ylc  extern.ylc  ffi.ylc  fib.ylc  func.ylc  if.ylc  ifif.ylc  pattern_match.ylc  rec_list_pattern.ylc  recursive.ylc  tuple.ylc
libffi.so.dSYM/Contents/: Info.plist
src/: lexer.rs  lib.rs  main.rs  main__.rs  parser.rs  std.rs  symbols.rs  typecheck.rs  util.rs
src/codegen/: _mod.rs  conditional.rs  function.rs  lists.rs  mod.rs  numeric_binop.rs  numeric_comparison.rs  pattern_matching.rs  types.rs
src/lexer/: mod.rs
src/parser/: mod.rs  types.rs
src/repl/: mod.rs
src/symbols/: mod.rs
src/typecheck/: constraints.rs  mod.rs  unify.rs
