[package]
name = "rst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
nom = "7.1.3"
pretty_assertions = "1.4.0"
rustyline = { version = "12.0.0", features = ["with-file-history"] }

# [[dependencies.rustyline]]
# version = "12.0.0"
# features = ["with-file-history"]
